--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=92Gtc0_5lUjrBPy"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
@@ -305,7 +305,7 @@
       <!-- Framework. -->
       <div class="column is-full-width">
         <div class="content">
-          <h2 class="title is-3"><b>S</b>ketch-based <b>E</b>valuations of <b>V</b>isual <b>A</b>bstraction</h2>
+          <h2 class="title is-3"><b>SEVA</b>: <b>S</b>ketch-based <b>E</b>valuations of <b>V</b>isual <b>A</b>bstraction</h2>
           <div class="content">
             <img src="./static/images/diagram_srgb.png">
           </div>
@@ -374,7 +374,7 @@
       <!-- Framework. -->
       <div class="column is-full-width">
         <div class="content">
-          <h2 class="title is-3">Evaluating Human and Machine Sketch Understanding</h2>
+          <h2 class="title is-3">Comparing Human and Machine Sketch Understanding</h2>
           <div>
             <div class="has-text-justified">
               <p>
