--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        we introduce SEVA, a new benchmark dataset containing 90K human-generated sketches that
+        We introduce SEVA, a new benchmark dataset containing 90K human-generated sketches that
         systematically vary in their level of detail and evaluate a suite of state-of-the-art vision
         models in their ability to understand them.
       </h2>
