--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
               vision models to evaluate human-model alignment. Building on prior research, we evaluated the models based on:
             </p>
 
-            <p>
-              (1) top-1 classification accuracy, reflecting raw sketch recognition performance.
+            <p style="margin-left: 25px;">
+              (1) <b>Top-1 classification accuracy</b>, reflecting raw sketch recognition performance.
             </p>
 
             <p>
@@ -408,13 +408,13 @@
               metrics:
             </p>
 
-            <p>
-              (2) Shannon entropy of the response distribution, reflecting the degree of uncertainty about the target object category;
+            <p style="margin-left: 25px;">
+              (2) <b>Shannon entropy of the response distribution</b>, reflecting the degree of uncertainty about the target object category;
               and
             </p>
 
-            <p>
-              (3) semantic neighbor preference, reflecting the degree to which models and humans generated off-target responses that
+            <p style="margin-left: 25px;">
+              (3) <b>Semantic neighbor preference</b>, reflecting the degree to which models and humans generated off-target responses that
               were semantically related to the target object category.
             </p>
 
