--- a/index.html
+++ b/index.html
@@ -306,9 +306,7 @@
       <div class="column is-full-width">
         <div class="content">
           <h2 class="title is-3">Visual abstraction as a key target for AI systems</h2>
-          <!-- <div class="content">
-            <img src="./static/images/diagram_srgb.png">
-          </div> -->
+
           <div class="has-text-justified">
             <p>
               Sketching is a powerful tool for understanding human visual abstraction—how we distill semantically relevant information
@@ -329,6 +327,9 @@
               human-like ways, here we tackle two critical challenges:
 
             </p>
+          </div>
+          <div class="content">
+              <img src="./static/images/Picasso_The_Bull.jpg">
           </div>
         </div>
       </div>
