--- a/index.html
+++ b/index.html
@@ -315,22 +315,25 @@
               cultures!) Perhaps this is because, even without specialized training, most people including kids can make and interpret
               sketches.
             </p>
-
+          </div>
+          <div class="content" style="margin-left: auto; margin-right: auto; width: 50%;">
+            <img src="./static/images/Picasso_The_Bull.jpg">
+          </div>
+          <div class="has-text-justified">
             <p>
               Take, for example, Picasso’s famous sketch series “The Bull” (1945). Despite some sketches being extremely sparse in
               details (right side) , each one is unmistakably a bull. What makes them so easily recognizable to us?
               Despite the fact that this ability to recognize visual concepts across levels of abstraction comes to us with such ease,
               it remains unclear to what extent current state-of-the-art vision algorithms are sensitive to visual abstraction in
               human-like ways.
-
+            </p>
+            <p>
               With a goal towards developing robust and generalized AI systems that can recognize sketches, diagrams, and glyphs in
               human-like ways, here we tackle two critical challenges:
-
             </p>
+
           </div>
-          <div class="content">
-              <img src="./static/images/Picasso_The_Bull.jpg">
-          </div>
+
         </div>
       </div>
     </div>
