--- a/index.html
+++ b/index.html
@@ -349,9 +349,7 @@
       <div class="column is-full-width">
         <div class="content">
           <h2 class="title is-3">SEVA: A novel Sketch benchmark for evaluating visual abstraction in humans and machines</h2>
-          <!-- <div class="content">
-            <img src="./static/images/diagram_srgb.png">
-          </div> -->
+
           <div class="has-text-justified">
             <p>
               First, we needed to benchmark how humans generate sketches at varying levels of abstraction and across a diverse set of
@@ -376,6 +374,9 @@
               diverse range of object categories.
 
             </p>
+          </div>
+          <div class="content">
+            <img src="./static/images/SEVA_dataset.png">
           </div>
         </div>
       </div>
