--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <!-- <div class="content">
             <img src="./static/images/diagram_srgb.png">
           </div> -->
-          <div class="has-text-justified">
+          <div class="column has-text-justified">
             <p>
               Second, we wanted to evaluate how well state-of-the-art vision algorithms could recognize (i.e., correctly classify the
               target object category) the sketches, relative to human recognition performance and also how well the patterns of
@@ -429,6 +429,10 @@
 
 
             </p>
+
+          </div>
+          <div class="column content">
+            <img src="./static/images/evaluation.png">
           </div>
         </div>
       </div>
