--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@
           <!-- <div class="content">
             <img src="./static/images/diagram_srgb.png">
           </div> -->
-          <div class="column has-text-justified">
+          <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 has-text-justified">
             <p>
               Second, we wanted to evaluate how well state-of-the-art vision algorithms could recognize (i.e., correctly classify the
               target object category) the sketches, relative to human recognition performance and also how well the patterns of
@@ -431,8 +432,9 @@
             </p>
 
           </div>
-          <div class="column content">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
             <img src="./static/images/evaluation.png">
+          </div>
           </div>
         </div>
       </div>
