--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             </p>
 
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content" style="max-width: 25%;">
             <img src="./static/images/evaluation.png">
           </div>
           </div>
