--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <img src="./static/images/diagram_srgb.png">
           </div> -->
           <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 has-text-justified">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 has-text-justified" style="max-width: 75%;">
             <p>
               Second, we wanted to evaluate how well state-of-the-art vision algorithms could recognize (i.e., correctly classify the
               target object category) the sketches, relative to human recognition performance and also how well the patterns of
@@ -432,7 +432,7 @@
             </p>
 
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content" style="max-width: 25%;">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
             <img src="./static/images/evaluation.png">
           </div>
           </div>
@@ -457,13 +457,18 @@
           </div> -->
           <div class="has-text-justified">
             <p>
-              While we observe certain similarities in the response patterns in human and model evaluations, a large gap remains
+              We observe certain similarities in the response patterns in human and model evaluations, but a large gap remains
               between their sketch understandings. Our findings reveal that sparser sketches exhibit higher levels of semantic
               ambiguity for both models and humans. In contrast, more detailed sketches are associated with higher top-1
               classification performance, a tighter distribution of responses (lower entropy), and greater semantic neighbor
               preference.
             </p>
+          </div>
+          <div class="content">
+            <img src="./static/images/time_constraints.png">
+          </div>
 
+          <div class="has-text-justified">
             <p>
 
               Among all high-performing models, there are reliable differences between their response patterns under the three
@@ -473,6 +478,9 @@
               human-human consistency across all metrics.
 
             </p>
+          </div>
+          <div class="content">
+            <img src="./static/images/alignment.png">
           </div>
         </div>
       </div>
