--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </p>
           </div>
           <div class="content">
-            <img src="./static/images/time_constraints.png">
+            <img src="./static/images/time_constraints.png" style="margin-left: auto; margin-right: auto; width: 80%;">
           </div>
 
           <div class="has-text-justified">
@@ -480,7 +480,7 @@
             </p>
           </div>
           <div class="content">
-            <img src="./static/images/alignment.png">
+            <img src="./static/images/alignment.png" style="margin-left: auto; margin-right: auto; width: 80%;">
           </div>
         </div>
       </div>
@@ -516,7 +516,7 @@
             </p>
           </div>
           <div class="content">
-            <img src="./static/images/human_CLIPasso.png">
+            <img src="./static/images/human_CLIPasso.png" style="margin-left: auto; margin-right: auto;">
           </div>
         </div>
       </div>
