--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
               preference.
             </p>
           </div>
-          <div class="content">
-            <img src="./static/images/time_constraints.png" style="margin-left: auto; margin-right: auto; width: 80%;">
+          <div class="content" style="margin-left: auto; margin-right: auto; width: 80%;">
+            <img src="./static/images/time_constraints.png">
           </div>
 
           <div class="has-text-justified">
@@ -479,8 +479,8 @@
 
             </p>
           </div>
-          <div class="content">
-            <img src="./static/images/alignment.png" style="margin-left: auto; margin-right: auto; width: 80%;">
+          <div class="content" style="margin-left: auto; margin-right: auto; width: 80%;">
+            <img src="./static/images/alignment.png">
           </div>
         </div>
       </div>
@@ -515,8 +515,8 @@
 
             </p>
           </div>
-          <div class="content">
-            <img src="./static/images/human_CLIPasso.png" style="margin-left: auto; margin-right: auto;">
+          <div class="content" style="margin-left: auto; margin-right: auto; width: 80%;">
+            <img src="./static/images/human_CLIPasso.png">
           </div>
         </div>
       </div>
