--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <img src="./static/images/diagram_srgb.png">
           </div> -->
           <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 has-text-justified" style="min-width: 75%;">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 has-text-justified" style="min-width: 70%;">
             <p>
               Second, we wanted to evaluate how well state-of-the-art vision algorithms could recognize (i.e., correctly classify the
               target object category) the sketches, relative to human recognition performance and also how well the patterns of
@@ -432,7 +432,7 @@
             </p>
 
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 content">
+          <div class="column" style="width: 100%; padding-top: 0px;">
             <img src="./static/images/evaluation.png">
           </div>
           </div>
