--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/xxx"
+                <a href="https://github.com/cogtoolslab/visual_abstractions_benchmarking_public2023/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -157,7 +157,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/xxx"
+                <a href="https://github.com/cogtoolslab/visual_abstractions_benchmarking_public2023/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -177,7 +177,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/teaser.mp4"
+        <source src="./static/videos/seva_teaser.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
