--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <!-- <a class="navbar-item" href="https://hypernerf.github.io">
+          <a class="navbar-item" href="https://hypernerf.github.io">
             HyperNeRF
           </a>
           <a class="navbar-item" href="https://nerfies.github.io">
@@ -77,7 +77,7 @@
           </a>
           <a class="navbar-item" href="https://photoshape.github.io">
             PhotoShape
-          </a> -->
+          </a>
         </div>
       </div>
     </div>
