--- a/index.html
+++ b/index.html
@@ -525,6 +525,20 @@
 </section>
 
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Sketch Gallery</h2>
+        <div class="content has-text-justified">
+
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
+
+
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
