--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <script defer src="./static/js/fontawesome.all.min.js"></script>
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/sketch-gallery.js"></script>
   <script src="./static/js/index.js"></script>
 </head>
 <body>
@@ -529,10 +530,10 @@
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-full-width">
         <h2 class="title is-3">Sketch Gallery</h2>
-        <div class="content has-text-justified">
-
+        <div class="content" id="sketch-gallery">
+            <!-- <div id="sketch-gallery"></div> -->
         </div>
       </div>
     </div>
