--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
-      <div class="column is-full-width">
+      <div class="column is-four-fifths">
         <h2 class="title is-3">Sketch Gallery</h2>
         <div class="content" id="sketch-gallery">
             <!-- <div id="sketch-gallery"></div> -->
