--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/xxx"
+                <a href="https://www.youtube.com/watch?v=PH8ZZud73Fw"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -264,8 +264,7 @@
             remains unclear to what extent they understand sketches in a human-like way.
           </p>
           <p>
-            Here we introduce <a
-              href="https://github.com/xxx"><i>SEVA</i></a>, a new benchmark dataset containing 90K human-generated sketches of 128 object concepts produced
+            Here we introduce <i>SEVA</i>, a new benchmark dataset containing 90K human-generated sketches of 128 object concepts produced
             under different time constraints, and thus systematically varying in sparsity. We evaluated a suite of state-of-the-art
             vision algorithms on their ability to correctly identify the target concept depicted in these sketches and to generate
             responses that are strongly aligned with human response patterns on the same sketch recognition task. We found that
@@ -288,8 +287,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <!-- <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=92Gtc0_5lUjrBPy"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+          <iframe src="https://www.youtube.com/embed/PH8ZZud73Fw"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
