--- a/index.html
+++ b/index.html
@@ -32,17 +32,20 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="icon" href="./static/images/favicon.svg">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/sketch-gallery.js"></script>
   <script src="./static/js/index.js"></script>
+
 </head>
 <body>
 
@@ -533,7 +536,15 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Sketch Gallery</h2>
         <div class="content" id="sketch-gallery">
-            <!-- <div id="sketch-gallery"></div> -->
+            <p>You can view sketches in our dataset by <br> searching a concept and selecting an abstraction level.</p>
+            <input id="search-concept" placeholder="Pick a concept" class="autoc"></input>
+            <select id="abstraction">
+                <option value="">Select Abstraction</option>
+                <option value="4000">4 Seconds</option>
+                <option value="8000">8 Seconds</option>
+                <option value="16000">16 Seconds</option>
+                <option value="32000">32 Seconds</option>
+            </select>
         </div>
       </div>
     </div>
