bug/wording fixes

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Sketch Gallery</h2>
         <div class="content" id="sketch-gallery">
-            <p>You can view sketches in our dataset by <br> searching a concept and selecting an abstraction level.</p>
+            <p>Search for a concept and select an abstraction level below to view sketches in our dataset</p>
             <input id="search-concept" placeholder="Pick a concept" class="autoc"></input>
             <select id="abstraction">
                 <option value="">Select Abstraction</option>
