--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Sketch Gallery</h2>
         <div class="content" id="sketch-gallery">
-            <p>Search for a concept and select an abstraction level below to view sketches in our dataset</p>
-            <input id="search-concept" placeholder="Pick a concept" class="autoc"></input>
+            <p>Search for an object category and select an abstraction level below to view sketches in our dataset</p>
+            <input id="search-concept" placeholder="Search Categories" class="autoc"></input>
             <select id="abstraction">
                 <option value="">Select Abstraction</option>
                 <option value="4000">4 Seconds</option>
