--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           <h1 class="title is-1 publication-title">SEVA: Leveraging Sketches to Evaluate Alignment between Human and Machine Visual Abstraction</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://kushinm.com/">Kushin Mukherjee</a><sup>1</sup>,</span>
+              <a href="https://kushinm.com/">Kushin Mukherjee</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a href="https://hollyhuey.github.io/">Holly Huey</a><sup>2</sup>,</span>
+              <a href="https://hollyhuey.github.io/">Holly Huey</a><sup>2*</sup>,</span>
             <span class="author-block">
-              <a href="https://xuanchenlu.com">Xuanchen Lu</a><sup>2</sup>,
+              <a href="https://xuanchenlu.com">Xuanchen Lu</a><sup>2*</sup>,
             </span>
             <span class="author-block">
               <a href="https://yael-vinker.github.io/website/">Yael Vinker</a><sup>3</sup>,
@@ -126,12 +126,16 @@
             <span class="author-block"><sup>5</sup>Stanford University</span>
           </div>
 
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"><sup>*</sup>Equal Contribution</span>
+          </div>
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
 
               <span class="link-block">
-                <a href="https://arxiv.org/abs/xxx"
+                <a href="https://arxiv.org/abs/2312.03035"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -567,10 +571,10 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="./static/files/xxx.pdf">
+         href="https://arxiv.org/pdf/2312.03035.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/cogtoolslab/photo-sketch-correspondence" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/cogtoolslab/visual_abstractions_benchmarking_public2023/" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
