--- a/index.html
+++ b/index.html
@@ -539,10 +539,10 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Sketch Gallery</h2>
         <div class="content" id="sketch-gallery">
-            <p>Use the textbox and dropdown menu below to view sketches of different object concepts at each abstraction level</p>
-            <input id="search-concept" placeholder="Enter Concept Name" class="autoc"></input>
+            <!-- <p>Use the textbox and dropdown menu below to view sketches of different object concepts at each abstraction level</p> -->
+            <input id="search-concept" placeholder="enter concept" class="autoc"></input>
             <select id="abstraction">
-                <option value="">Select Abstraction</option>
+                <option value="">abstraction level</option>
                 <option value="4000">4 Seconds</option>
                 <option value="8000">8 Seconds</option>
                 <option value="16000">16 Seconds</option>
